overflow fix

--- a/portfolio/styles/globals.css
+++ b/portfolio/styles/globals.css
@@ -7,9 +7,10 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     color: #2b3134;
-    width: 98.5vw;
+    width: 100vw;
     margin: auto;
     font-size: 0.8rem;
+    overflow-x: hidden;
    
 
 }
